--- a/image_classifier/Image Classifier Project.ipynb
+++ b/image_classifier/Image Classifier Project.ipynb
@@ -27,17 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports here"
+    "# Imports here\n",
+    "# Imports here\n",
+    "import torch \n",
+    "from torch import nn\n",
+    "from torch import optim \n",
+    "import torch.nn.functional as F\n",
+    "from torchvision import datasets, transforms, models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "## Load the data\n",
     "\n",
     "Here you'll use `torchvision` to load the data ([documentation](http://pytorch.org/docs/0.3.0/torchvision/index.html)). The data should be included alongside this notebook, otherwise you can [download it here](https://s3.amazonaws.com/content.udacity-data.com/nd089/flower_data.tar.gz). The dataset is split into three parts, training, validation, and testing. For the training, you'll want to apply transformations such as random scaling, cropping, and flipping. This will help the network generalize leading to better performance. You'll also need to make sure the input data is resized to 224x224 pixels as required by the pre-trained networks.\n",
@@ -62,18 +69,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Define your transforms for the training, validation, and testing sets\n",
-    "data_transforms = \n",
     "\n",
+    "train_transforms = transforms.Compose([transforms.RandomRotation(40),\n",
+    "                                       transforms.RandomResizedCrop(224),\n",
+    "                                       transforms.RandomHorizontalFlip(),\n",
+    "                                       transforms.ToTensor(),\n",
+    "                                       transforms.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225])\n",
+    "                                    ])\n",
+    "\n",
+    "\n",
+    "valid_transforms = transforms.Compose([transforms.Resize(224),\n",
+    "                                       transforms.ToTensor(),\n",
+    "                                       transforms.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225])\n",
+    "                                    ])\n",
+    "\n",
+    "test_transforms = transforms.Compose([transforms.Resize(224),\n",
+    "                                      transforms.ToTensor(),\n",
+    "                                      transforms.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225])\n",
+    "                                    ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# TODO: Load the datasets with ImageFolder\n",
-    "image_datasets = \n",
+    "train_data = datasets.ImageFolder(train_dir, transform=train_transforms)\n",
+    "valid_data = datasets.ImageFolder(valid_dir, transform=valid_transforms)\n",
+    "test_data = datasets.ImageFolder(test_dir, transform=test_transforms)\n",
     "\n",
     "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "dataloaders = "
+    "trainloader = torch.utils.data.DataLoader(train_data, batch_size=64, shuffle = True)\n",
+    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=64, shuffle = True)\n",
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=64, shuffle = True)"
    ]
   },
   {
@@ -87,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +160,115 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Build and train your network"
+    "# TODO: Build and train your network\n",
+    "model = models.vgg16(pretrained=True)\n",
+    "model\n",
+    "\n",
+    "model.parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Here I freeze the parameters\n",
+    "\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad=False\n",
+    "    \n",
+    "# Here I set up the new classifier, so that it returns the correct number of outputs and has dropout implemented\n",
+    "# Just tp experiment, I keep the ration of dropout probabilty to number of nodes costant over the three inner layers\n",
+    "\n",
+    "# Hyperparameters for our flower_classifier\n",
+    "input_size = 25088\n",
+    "hidden_sizes = [12544, 3136, 392]\n",
+    "output_size = 102\n",
+    "\n",
+    "# Build a feed-forward network\n",
+    "flower_classifier = nn.Sequential(nn.Linear(input_size, hidden_sizes[0]),\n",
+    "                                  nn.ReLU(),\n",
+    "                                  nn.Dropout(0.3),\n",
+    "                                  nn.Linear(hidden_sizes[0], hidden_sizes[1]),\n",
+    "                                  nn.ReLU(),\n",
+    "                                  nn.Dropout(0.3),\n",
+    "                                  nn.Linear(hidden_sizes[1], hidden_sizes[2]),\n",
+    "                                  nn.ReLU(),\n",
+    "                                  nn.Dropout(0.3),\n",
+    "                                  nn.Linear(hidden_sizes[2], output_size),\n",
+    "                                  nn.LogSoftmax(dim=1)\n",
+    "                                 )\n",
+    "\n",
+    "model.classifier = flower_classifier\n",
+    "\n",
+    "# Use GPU if it's available (I know it is, it is just to practice with general purpose code)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# I stick to the Negative Logarithmic Likelihood Loss for discrete outputs\n",
+    "criterion = nn.NLLLoss()\n",
+    "# Adaptive momentum for the optimizer and quite low learning rate, at least to start off\n",
+    "optimizer = optim.Adam(model.classifier.parameters(),lr=0.05)\n",
+    "\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now let us train the network for real !\n",
+    "# Just as in the lectures, we perform validation within the same loop we use for training\n",
+    "\n",
+    "epochs= 50\n",
+    "steps = 0 \n",
+    "running_loss = 0\n",
+    "\n",
+    "with active_session():\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
+    "        \n",
+    "           # Training phase\n",
+    "        \n",
+    "        for inputs, labels in trainloader:\n",
+    "            inputs, labels = inputs.to(device), labels.to(device)\n",
+    "            \n",
+    "            steps += 1\n",
+    "            optimizer.zero_grad()\n",
+    "        \n",
+    "            logps = model.forward(inputs)\n",
+    "            loss = criterion(logps, labels)\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            running_loss += loss.item()\n",
+    "            \n",
+    "        else:\n",
+    "            print(f\"Number of updating steps performed in last training epoch: {steps}\".format(steps))\n",
+    "            valid_loss = 0\n",
+    "            valid_accuracy = 0\n",
+    "            model.eval()\n",
+    "                \n",
+    "            with torch.no_grad():\n",
+    "                for inputs, labels in validloader:\n",
+    "                    inputs, labels = inputs.to(device), labels.to(device)\n",
+    "                    logps = model.forward(inputs)\n",
+    "                    loss = criterion(logps, labels)\n",
+    "                    valid_loss += loss.item()\n",
+    "                \n",
+    "                    # Computing the validation accuracy    \n",
+    "                    ps = torch.exp(logps)\n",
+    "                    top_p, top_class = ps.topk(1, dim=1)\n",
+    "                    equals = top_class == labels.view(*top_class.shape)\n",
+    "                    valid_accuracy += torch.mean(equals.type(torch.FloatTensor)).item()         \n",
+    "                \n",
+    "        print(f\"Epoch {epoch+1}/{epochs}.. \"\n",
+    "        f\"Training loss: {running_loss/len(trainloader):.3f}.. \"\n",
+    "        f\"Validation loss: {valid_loss/len(validloader):.3f}.. \"\n",
+    "        f\"Validation accuracy: {valid_accuracy/len(validloader):.3f}\")\n",
+    "        running_loss = 0\n",
+    "        model.train()"
    ]
   },
   {
@@ -339,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
