--- a/image_classifier/Image Classifier Project.ipynb
+++ b/image_classifier/Image Classifier Project.ipynb
@@ -286,7 +286,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Do validation on the test set"
+    "# TODO: Do validation on the test set\n",
+    "\n",
+    "model.eval()\n",
+    "\n",
+    "test_accuracy = 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    \n",
+    "    for inputs, labels in testloader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        logps = model.forward(inputs)\n",
+    "        # Computing the validation accuracy    \n",
+    "        ps = torch.exp(logps)\n",
+    "        top_p, top_class = ps.topk(1, dim=1)\n",
+    "        equals = top_class == labels.view(*top_class.shape)\n",
+    "        test_accuracy += torch.mean(equals.type(torch.FloatTensor)).item()                \n",
+    "    else: \n",
+    "        print(f\"Test accuracy: {test_accuracy/len(testloader):.3f}\")"
    ]
   },
   {
@@ -308,7 +325,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint "
+    "# TODO: Save the checkpoint \n",
+    "\n",
+    "# TODO: Save the checkpoint \n",
+    "\n",
+    "model.class_to_idx = train_data.class_to_idx\n",
+    "\n",
+    "input_size = 25088\n",
+    "hidden_sizes = [12544, 3136, 392]\n",
+    "output_size = 102\n",
+    "\n",
+    "checkpoint = {'input_size': 25088, \n",
+    "              'hidden_size_0': 12544, \n",
+    "              'hidden_size_1': 3136, \n",
+    "              'hidden_size_2': 392,\n",
+    "              'output_size': 102,\n",
+    "              'dropout': 0.3,\n",
+    "              'state_dict': model.state_dict(),\n",
+    "              'optimizer_state': optimizer.state_dict(),\n",
+    "              'epochs_num': 10,\n",
+    "              'class_mapping': model.class_to_idx\n",
+    "             }\n",
+    "\n",
+    "torch.save(checkpoint, 'checkpoint.pth')"
    ]
   },
   {
@@ -326,7 +365,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model"
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "\n",
+    "def load_flower_checkpoint(filepath):\n",
+    "    checkpoint = torch.load(filepath)\n",
+    "    model = models.vgg16(pretrained=True)\n",
+    "    model.classifier = nn.Sequential(nn.Linear(checkpoint['input_size'], checkpoint['hidden_size_0']),\n",
+    "                                  nn.ReLU(),\n",
+    "                                  nn.Dropout(checkpoint['dropout']),\n",
+    "                                  nn.Linear(checkpoint['hidden_size_0'], checkpoint['hidden_size_1']),\n",
+    "                                  nn.ReLU(),\n",
+    "                                  nn.Dropout(checkpoint['dropout']),\n",
+    "                                  nn.Linear(checkpoint['hidden_size_1'], checkpoint['hidden_size_2']),\n",
+    "                                  nn.ReLU(),\n",
+    "                                  nn.Dropout(checkpoint['dropout']),\n",
+    "                                  nn.Linear(checkpoint['hidden_size_2'], checkpoint['output_size']),\n",
+    "                                  nn.LogSoftmax(dim=1)\n",
+    "                                 )\n",
+    "    model.class_to_idx = checkpoint['class_mapping'] \n",
+    "    model.load_state_dict(checkpoint['state_dict'])\n",
+    "    optimizer = optim.SGD(model.classifier.parameters(),lr=0.05,momentum=0.8)\n",
+    "    optimizer.load_state_dict(checkpoint['optimizer_state'])\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flower_model = load_flower_checkpoint('checkpoint.pth')"
    ]
   },
   {
@@ -366,12 +436,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_image(image):\n",
     "    ''' Scales, crops, and normalizes a PIL image for a PyTorch model,\n",
-    "        returns an Numpy array\n",
+    "        returns a Numpy array\n",
     "    '''\n",
+    "    im = Image.open(image)\n",
+    "    avg = np.array([0.485, 0.456, 0.406])\n",
+    "    stdev = np.array([0.229, 0.224, 0.225])\n",
     "    \n",
-    "    # TODO: Process a PIL image for use in a PyTorch model"
+    "    if im.size[0] <= im.size[1]:\n",
+    "        im.thumbnail([256,256/im.size[0]*im.size[1]])\n",
+    "        ima = im.crop((16,int(im.size[1]-224)/2,240,int(im.size[1]-224)/2+224))\n",
+    "    else:\n",
+    "        im.thumbnail([256/im.size[1]*im.size[0],256])\n",
+    "        ima = im.crop((int(im.size[0]-224)/2,16,int(im.size[0]-224)/2+224,240))\n",
+    "     \n",
+    "    conv_ima = np.array(ima)/255\n",
+    "    final = torch.Tensor(((conv_ima-avg)/stdev).transpose((2,0,1)))\n",
+    "        \n",
+    "    return final"
    ]
   },
   {
@@ -410,6 +504,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imshow(process_image('flowers/test/1/image_06743.jpg'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -436,11 +539,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Here is the list of 2-tuples which are clas-index pairs  \n",
+    "class_to_idx = list(flower_model.class_to_idx.items());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we revert the original dictionary in order to have an index-to-class mapping\n",
+    "idx_to_class = list({v : k for k, v in flower_model.class_to_idx.items()}.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here is the list of class-name pairs: \n",
+    "class_to_name = sorted(cat_to_name.items());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we use the two lists created above to build a dictionary which associates indices to actual flower names\n",
+    "idx_to_flower = {}\n",
+    "\n",
+    "for i in range(0,len(class_to_name)):\n",
+    "               idx_to_flower[idx_to_class[i][0]] = class_to_name[i][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def predict(image_path, model, topk=5):\n",
     "    ''' Predict the class (or classes) of an image using a trained deep learning model.\n",
     "    '''\n",
+    "    # TODO: Implement the code to predict the class from an image file\n",
     "    \n",
-    "    # TODO: Implement the code to predict the class from an image file"
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model.to(device)\n",
+    "\n",
+    "    img_tensor = process_image(image_path).unsqueeze_(0)\n",
+    "    inputs = img_tensor.to(device)\n",
+    "    \n",
+    "    logps = model.forward(inputs)\n",
+    "    ps = torch.exp(logps)\n",
+    "    top_ps, top_classes = ps.topk(topk)\n",
+    "    \n",
+    "    return top_ps.to('cpu').squeeze().tolist(), top_classes.to('cpu').squeeze().tolist()"
    ]
   },
   {
@@ -462,7 +619,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Display an image along with the top 5 classes"
+    "# TODO: Display an image along with the top 5 classes\n",
+    "\n",
+    "probs, classes = predict('flowers/test/1/image_06743.jpg', flower_model, topk=5)\n",
+    "print(probs)\n",
+    "print(list(map(idx_to_flower.get,classes)))"
    ]
   }
  ],
