Implemented model training through command line

--- a/image_classifier/Image Classifier Project.ipynb
+++ b/image_classifier/Image Classifier Project.ipynb
@@ -27,13 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports here\n",
-    "# Imports here\n",
-    "import torch \n",
+    "import torch\n",
     "from torch import nn\n",
     "from torch import optim \n",
     "import torch.nn.functional as F\n",
@@ -44,7 +43,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## Load the data\n",
     "\n",
     "Here you'll use `torchvision` to load the data ([documentation](http://pytorch.org/docs/0.3.0/torchvision/index.html)). The data should be included alongside this notebook, otherwise you can [download it here](https://s3.amazonaws.com/content.udacity-data.com/nd089/flower_data.tar.gz). The dataset is split into three parts, training, validation, and testing. For the training, you'll want to apply transformations such as random scaling, cropping, and flipping. This will help the network generalize leading to better performance. You'll also need to make sure the input data is resized to 224x224 pixels as required by the pre-trained networks.\n",
@@ -69,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,31 +82,26 @@
     "\n",
     "\n",
     "valid_transforms = transforms.Compose([transforms.Resize(224),\n",
+    "                                       transforms.CenterCrop(224),\n",
     "                                       transforms.ToTensor(),\n",
     "                                       transforms.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225])\n",
     "                                    ])\n",
     "\n",
     "test_transforms = transforms.Compose([transforms.Resize(224),\n",
+    "                                      transforms.CenterCrop(224),\n",
     "                                      transforms.ToTensor(),\n",
     "                                      transforms.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225])\n",
-    "                                    ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: Load the datasets with ImageFolder\n",
+    "                                    ])\n",
+    "\n",
+    "# Load the datasets with ImageFolder\n",
     "train_data = datasets.ImageFolder(train_dir, transform=train_transforms)\n",
     "valid_data = datasets.ImageFolder(valid_dir, transform=valid_transforms)\n",
     "test_data = datasets.ImageFolder(test_dir, transform=test_transforms)\n",
     "\n",
-    "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
+    "# Using the image datasets and the transforms, define the dataloaders\n",
     "trainloader = torch.utils.data.DataLoader(train_data, batch_size=64, shuffle = True)\n",
-    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=64, shuffle = True)\n",
-    "testloader = torch.utils.data.DataLoader(test_data, batch_size=64, shuffle = True)"
+    "validloader = torch.utils.data.DataLoader(valid_data, batch_size=64)\n",
+    "testloader = torch.utils.data.DataLoader(test_data, batch_size=64)"
    ]
   },
   {
@@ -122,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +133,7 @@
     "\n",
     "Now that the data is ready, it's time to build and train the classifier. As usual, you should use one of the pretrained models from `torchvision.models` to get the image features. Build and train a new feed-forward classifier using those features.\n",
     "\n",
-    "We're going to leave this part up to you. If you want to talk through it with someone, chat with your fellow students! You can also ask questions on the forums or join the instructors in office hours.\n",
-    "\n",
-    "Refer to [the rubric](https://review.udacity.com/#!/rubrics/1663/view) for guidance on successfully completing this section. Things you'll need to do:\n",
+    "We're going to leave this part up to you. Refer to [the rubric](https://review.udacity.com/#!/rubrics/1663/view) for guidance on successfully completing this section. Things you'll need to do:\n",
     "\n",
     "* Load a [pre-trained network](http://pytorch.org/docs/master/torchvision/models.html) (If you need a starting point, the VGG networks work great and are straightforward to use)\n",
     "* Define a new, untrained feed-forward network as a classifier, using ReLU activations and dropout\n",
@@ -151,7 +142,25 @@
     "\n",
     "We've left a cell open for you below, but use as many as you need. Our advice is to break the problem up into smaller parts you can run separately. Check that each part is doing what you expect, then move on to the next. You'll likely find that as you work through each part, you'll need to go back and modify your previous code. This is totally normal!\n",
     "\n",
-    "When training make sure you're updating only the weights of the feed-forward network. You should be able to get the validation accuracy above 70% if you build everything right. Make sure to try different hyperparameters (learning rate, units in the classifier, epochs, etc) to find the best model. Save those hyperparameters to use as default values in the next part of the project."
+    "When training make sure you're updating only the weights of the feed-forward network. You should be able to get the validation accuracy above 70% if you build everything right. Make sure to try different hyperparameters (learning rate, units in the classifier, epochs, etc) to find the best model. Save those hyperparameters to use as default values in the next part of the project.\n",
+    "\n",
+    "One last important tip if you're using the workspace to run your code: To avoid having your workspace disconnect during the long-running tasks in this notebook, please read in the earlier page in this lesson called Intro to\n",
+    "GPU Workspaces about Keeping Your Session Active. You'll want to include code from the workspace_utils.py module.\n",
+    "\n",
+    "**Note for Workspace users:** If your network is over 1 GB when saved as a checkpoint, there might be issues with saving backups in your workspace. Typically this happens with wide dense layers after the convolutional layers. If your saved checkpoint is larger than 1 GB (you can open a terminal and check with `ls -lh`), you should reduce the size of your hidden layers and train again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Build and train your network\n",
+    "model = getattr(models, 'vgg16')(pretrained=True)\n",
+    "#model = models.vgg16(pretrained=True)"
    ]
   },
   {
@@ -160,10 +169,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Build and train your network\n",
-    "model = models.vgg16(pretrained=True)\n",
-    "model\n",
-    "\n",
     "model.parameters"
    ]
   },
@@ -173,7 +178,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Here I freeze the parameters\n",
     "\n",
     "for param in model.parameters():\n",
@@ -185,6 +189,7 @@
     "# Hyperparameters for our flower_classifier\n",
     "input_size = 25088\n",
     "hidden_sizes = [12544, 3136, 392]\n",
+    "hidden_size = 600\n",
     "output_size = 102\n",
     "\n",
     "# Build a feed-forward network\n",
@@ -199,18 +204,7 @@
     "                                  nn.Dropout(0.3),\n",
     "                                  nn.Linear(hidden_sizes[2], output_size),\n",
     "                                  nn.LogSoftmax(dim=1)\n",
-    "                                 )\n",
-    "\n",
-    "model.classifier = flower_classifier\n",
-    "\n",
-    "# Use GPU if it's available (I know it is, it is just to practice with general purpose code)\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "# I stick to the Negative Logarithmic Likelihood Loss for discrete outputs\n",
-    "criterion = nn.NLLLoss()\n",
-    "# Adaptive momentum for the optimizer and quite low learning rate, at least to start off\n",
-    "optimizer = optim.Adam(model.classifier.parameters(),lr=0.05)\n",
-    "\n",
-    "model.to(device)"
+    "                                 )"
    ]
   },
   {
@@ -219,10 +213,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now let us train the network for real !\n",
-    "# Just as in the lectures, we perform validation within the same loop we use for training\n",
+    "# Use GPU if it's available (I know it is, it is just to practice with general purpose code)\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "epochs= 50\n",
+    "model.to(device);\n",
+    "\n",
+    "# I stick to the Negative Logarithmic Likelihood Loss for discrete outputs\n",
+    "criterion = nn.NLLLoss()\n",
+    "# Adaptive momentum for the optimizer and quite low learning rate, at least to start off\n",
+    "optimizer = optim.SGD(model.classifier.parameters(),lr=0.05,momentum=0.8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we actually train and validate the model !\n",
+    "\n",
+    "epochs= 10\n",
     "steps = 0 \n",
     "running_loss = 0\n",
     "\n",
@@ -245,7 +255,7 @@
     "            running_loss += loss.item()\n",
     "            \n",
     "        else:\n",
-    "            print(f\"Number of updating steps performed in last training epoch: {steps}\".format(steps))\n",
+    "            #print(f\"Number of updating steps performed in last training epoch: {steps}\".format(steps))\n",
     "            valid_loss = 0\n",
     "            valid_accuracy = 0\n",
     "            model.eval()\n",
@@ -325,8 +335,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint \n",
-    "\n",
     "# TODO: Save the checkpoint \n",
     "\n",
     "model.class_to_idx = train_data.class_to_idx\n",
@@ -625,6 +633,13 @@
     "print(probs)\n",
     "print(list(map(idx_to_flower.get,classes)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
